  occurrence.
- Fixed a test so that the GLC_CATALOG_LIST environment variable is now taken
  into account.
- Prevented advance past end of string during conversion between logical order
  and visual order so that zero length strings are handled properly.
- Removed NULL dereference after FcPatternGetString().
- Fixed texture atlas coordinate calculation.

Changes made from the "0.4" release to the "0.5" release:
-----------------------------------------------------------

- Fixed the #include so that QuesoGLC can be built with MSVC++
- Added an attribute stack to save and restore the GLC state variables.
- Added a matrix stack for GLC_BITMAP_MATRIX.
- Added support for kerning.
- Added support for the FreeType cache sub-system.
- Force thread-safety for included libraries.
- Fixed a bug where glcGetMasterc() returned silly values for
  GLC_FULL_NAME_SGI and GLC_VERSION attributes.
- QuesoGLC is now compliant with the Unicode Bidirectional Algorithm (UAX#9)
  thanks to Fribidi.
- Added the ability to extrude the characters.
- A texture atlas is now used for GLC_TEXTURE rendering style.
- Improved the speed for display list rendering by moving out some stuff that is
  only needed for immediate mode rendering.
- QuesoGLC now tries to re-use as much as possible the texture generated for
  immediate mode rendering.
- The OpenGL version is now checked and the texture rendering behaves
  accordingly.
- Environment variables GLC_LIST_SEPARATOR and GLC_CATALOG_LIST are now read by
  QuesoGLC. They supersedes GLC_PATH if defined otherwise GLC_PATH is parsed.
  (suggestion by Brandon Casey).
- Blank Unicode characters (that is character which are expected to be blank
  when drawn) are now managed according to the Unicode standards.
- Thomas Zimmermann greatly improved the building scripts.

Changes made from the "0.3" release to the "0.4" release:
-----------------------------------------------------------
